--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==0.11.1
+Flask-SQLAlchemy==2.1
 Jinja2==2.8
 MarkupSafe==0.23
+SQLAlchemy==1.0.14
 Werkzeug==0.11.10
 argparse==1.2.1
 click==6.6
