--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 Flask==0.11.1
+Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.1
 Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.14
 Werkzeug==0.11.10
 argparse==1.2.1
+blinker==1.4
 click==6.6
+ezvis3d==0.1
 itsdangerous==0.24
 nltk==3.2.1
+numpy==1.11.1
+psycopg2==2.6.2
+regex==2016.07.21
 wsgiref==0.1.2
